added the 2nd and 3rd blog

--- a/index.html
+++ b/index.html
@@ -11,5 +11,13 @@
         <h3>My first website</h3>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatem accusantium autem qui molestiae. Quia obcaecati atque sed suscipit pariatur adipisci.</p>
     </div>
+    <div>
+        <h3>My second blog</h3>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatem accusantium autem qui molestiae. Quia obcaecati atque sed suscipit pariatur adipisci.</p>
+    </div>
+    <div>
+        <h3>My third blog</h3>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatem accusantium autem qui molestiae. Quia obcaecati atque sed suscipit pariatur adipisci.</p>
+    </div>
 </body>
 </html>
